fix: hotfix na arquitetura do projeto/ add log nas rotas